k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web-api
  namespace: todo-app
  labels:
    app: todo-api
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: todo-api
  type: ClusterIP
