k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: todo-app
  labels:
    app: todo-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: todo-mysql
  type: ClusterIP
